syntax = 'proto3';
package com.proto.operation;

option java_multiple_files = true;
option java_package = 'com.proto.sum';

message SumRequest{
  int32 value1 = 1;
  int32 value2 = 2;
}

message SumResponse{
  int32 result = 1 ;
}

service SumService{
  rpc execute(SumRequest) returns (SumResponse);
}
